Updating to current MC version