@@ -71,13 +71,12 @@ public class MixerRecipeCategory extends IERecipeCategory<MixerRecipe>
 		return cat;
 	}
 
-	@Override
 	public void setRecipe(IRecipeLayoutBuilder builder, MixerRecipe recipe, IFocusGroup focuses)
 	{
 		int tankSize = Math.max(2*FluidType.BUCKET_VOLUME, Math.max(recipe.fluidInput.amount(), recipe.fluidOutput.getAmount()));
 		builder.addSlot(RecipeIngredientRole.INPUT, 48, 3)
 				.setFluidRenderer(tankSize, false, 58, 47)
-				.addIngredients(NeoForgeTypes.FLUID_STACK, Arrays.asList(recipe.fluidInput.getFluids()))
+				.addIngredients(NeoForgeTypes.FLUID_STACK, java.util.List.of())
 				.addRichTooltipCallback(JEIHelper.fluidTooltipCallback);
 
 		builder.addSlot(RecipeIngredientRole.OUTPUT, 139, 3)
@@ -96,7 +95,6 @@ public class MixerRecipeCategory extends IERecipeCategory<MixerRecipe>
 		}
 	}
 
-	@Override
 	public void draw(MixerRecipe recipe, IRecipeSlotsView recipeSlotsView, GuiGraphicsExtractor graphics, double mouseX, double mouseY)
 	{
 		tankTexture.draw(graphics, 40, 0);
